http/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    ingress.cloud.f5.com/https-auto-cert: "false"   #TLS termination with auto cert
    ingress.cloud.f5.com/http-redirect: "false"     #Enable HTTP to HTTPs redirect

spec:
  rules:
  - host: $HOSTNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 8080
